Updated kubernetes and marathon configs to use cassandra-mesos
- supplied configs require cassandra-mesos and mesos-dns (oinker itself does not)
- add HTTPError
- move repo impls to service dir
- make use of inject service lifecycle
- use Logrus for levelled logging
- make replication factor configurable (by default uses quorum of known hosts)

--- a/kubernetes.yaml
+++ b/kubernetes.yaml
@@ -21,6 +21,10 @@ items:
         - name: server
           image: karlkfi/oinker-go:latest
           imagePullPolicy: Always
+          command:
+          - "oinker"
+          - "--cassandra-addr=cassandra-dcos-node.cassandra.dcos.mesos"
+          - "--cassandra-repl=3"
           ports:
           - name: http
             containerPort: 8080
