--- a/kubernetes.yaml
+++ b/kubernetes.yaml
@@ -28,6 +28,14 @@ items:
           ports:
           - name: http
             containerPort: 8080
+          resources:
+            limits:
+              cpu: 0.25
+          env:
+          - name: OINKER_INSTANCE_NAME
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.name
 - apiVersion: v1
   kind: Service
   metadata:
