--- a/kubernetes.yaml
+++ b/kubernetes.yaml
@@ -25,6 +25,17 @@ items:
           - "oinker"
           - "--cassandra-addr=cassandra-dcos-node.cassandra.dcos.mesos"
           - "--cassandra-repl=3"
+          readinessProbe:
+            httpGet:
+              path: /ready
+              port: http
+            initialDelaySeconds: 15
+            timeoutSeconds: 1
+          livenessProbe:
+            tcpSocket:
+              port: http
+            initialDelaySeconds: 15
+            timeoutSeconds: 1
           ports:
           - name: http
             containerPort: 8080
