--- a/Godeps/_workspace/src/github.com/gocql/gocql/.travis.yml
+++ b/Godeps/_workspace/src/github.com/gocql/gocql/.travis.yml
@@ -1,10 +1,12 @@
 language: go
 
-sudo: false
+sudo: required
+dist: trusty
 
 cache:
   directories:
     - $HOME/.ccm/repository
+    - $HOME/.local/lib/python2.7
 
 matrix:
   fast_finish: true
@@ -15,21 +17,19 @@ env:
   matrix:
     - CASS=2.0.17
       AUTH=false
-    - CASS=2.1.11
+    - CASS=2.1.12
       AUTH=false
-    - CASS=2.1.11
+    - CASS=2.2.4
       AUTH=true
-    - CASS=2.2.3
+    - CASS=2.2.5
       AUTH=false
 
 go:
-  - 1.4
-  - 1.5
+  - 1.6
+  - 1.7
 
 install:
   - pip install --user cql PyYAML six
-  - go get golang.org/x/tools/cmd/vet
-  - go get golang.org/x/tools/cmd/cover
   - git clone https://github.com/pcmanus/ccm.git
   - pushd ccm
   - ./setup.py install --user
@@ -38,7 +38,6 @@ install:
 
 script:
   - set -e
-  - go test -v -tags unit
   - PATH=$PATH:$HOME/.local/bin bash integration.sh $CASS $AUTH
   - go vet .
 
